Ajout tableau graphique des tournois
Signed-off-by: DarkVador008 <darkvador008@informateque.be>

--- a/vue/css/custom.css
+++ b/vue/css/custom.css
@@ -5,3 +5,11 @@
 .tb{
 	border: 1px solid black;
 }
+
+td.JH  { border-bottom:1px solid black; vertical-align:bottom;}
+td.JB  { border-bottom:1px solid black; border-right:1px solid black; vertical-align:bottom;}
+td.JHS { border-right:1px solid black; vertical-align:top;}
+td.JBS { vertical-align:top;}
+
+table.NONE{border-spacing:10;border-collapse:initial}
+
